Adding LinkedList scaffolding

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXX=clang++
 CPPFLAGS=-pedantic -Wall -Wextra -std=c++17 -I
 
-OBJECTS = main.cc bst.cc node.cc repl.cc
+OBJECTS = main.cc bst.cc node.cc repl.cc linkedlist.cc
 
 trees: $(OBJECTS)
 	$(CXX) -o $@ $^
