Splitting repl file into a more comprehensive structure

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXX=clang++
-CPPFLAGS=-pedantic -Wall -Wextra -std=c++17 -I
+CPPFLAGS=-pedantic -Wall -Wextra -Wno-unused-variable -std=c++17 -I
 
-OBJECTS = main.cc bst.cc node.cc repl.cc linkedlist.cc
+OBJECTS = main.cc bst.cc node.cc repl_bst.cc repl_linkedlist.cc repl.cc linkedlist.cc
 
 trees: $(OBJECTS)
 	$(CXX) -o $@ $^
